--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="theme-color" content="#ffffff" />
 
 <!-- iPhone PWA -->
-<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 <link rel="apple-touch-icon" href="/icon-512.png" />
     <meta charset="UTF-8" />
@@ -18,6 +18,7 @@
   </body>
   <script>
   if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("/firebase-messaging-sw.js");
   }
 </script>
 
